<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPaste34411">
    <TextView
        android:id="@+id/appTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Register"
        android:textColor="@color/colorBLack"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTx"
        >

        <LinearLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="100dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <EditText
                android:id="@+id/userNameRegisterEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:hint="@string/user_name"
                android:background="@drawable/bg_edit_text"
                android:inputType="text"
                android:textSize="@dimen/sp_13"
                android:layout_marginTop="15dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/emailRegisterEdit"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/sp_13"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/passWordRegisterEdit"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_13"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/password2RegisterEdit"
                android:hint="@string/confirm_password"
                android:paddingStart="10dp"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_13"
                android:imeOptions="flagNoFullscreen"
                android:layout_marginTop="15dp"
                />
            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPaste34499"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="@dimen/sp_15"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>